feat: add billing plan route
